fix: issue with main panel not showing the full height

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,5 +1,4 @@
 .infoContainer {
-    height: 100%;
     max-width: 823px;
     background-color: #fff;
     margin: 0;
